--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,4 @@
 <html>
-<header>
 <title>SyncBooker :: FAQ</title>
 <style>
 h1 {
@@ -12,13 +11,12 @@ p {
     font-size: 20px;
 }
 </style>
-</header>
 <body>
 <h1>FAQ/ЧАВО или часто задаваемые вопросы</h1>
 
 <h2>Для чего нужна программа SyncBooker?</h2>
-<p>Программы SyncBooker предназначена для синхронного просмотра и прослушивания электронных книг.</p>
-<p>Сами книги в этой программе содержат метки на время воспроизведения и позиции в тексте, что позволяет удобно и легко выполнять скороллинг в нужное место.</p>
+<p>Программы SyncBooker предназначена для синхронного просмотра и прослушивания электронных книг на двух языках.</p>
+<p>Сами книги в этой программе содержат метки на время воспроизведения и позиции в тексте, что позволяет удобно и легко выполнять скороллинг в нужное место либо напрямую кликая на нужный обзац, либо через паузу, перематывая вертикальный скроллинг текста.</p>
 <p>Её можно использовать как обычный плеер, так и ридер книг.</p>
 <p>Единственное ограничение программа - бинарник только для платформы Windows x64.</p>
 <p>Все книги в каталоге есть на двух языках - русском и английском (добавление других языков не планируется, хотя Вы можете сделать это самостоятельно.)</p>
