--- a/cases.html
+++ b/cases.html
@@ -17,7 +17,7 @@ p {
 
 <h2>Изучение иностранного языка</h2>
 <p>Программа легко заменяет фильмы с субтитрами на аудиокниги с текстами.</p>
-<p>Текста на экране здесь гораздо больше, чем при использовании субтитров, которые обычно отображаются одной-двумя строками. Это позволяет при изучении языка состредоточиться на тексте, его смысле и произношении.</p>
+<p>Текста на экране здесь гораздо больше, чем при использовании субтитров, которые обычно отображаются одной-двумя строками. Это позволяет при изучении языка сосредоточиться на тексте, его смысле и произношении.</p>
 
 <h2>Трансляция окна программы</h2>
 <p>В образовательных целях всегда можно создать онлайн-трансляцию с запущенной программой или заранее записать видео и распространять его в интернете.</p>
