--- a/faq.html
+++ b/faq.html
@@ -16,19 +16,19 @@ p {
 
 <h2>Для чего нужна программа SyncBooker?</h2>
 <p>Программы SyncBooker предназначена для синхронного просмотра и прослушивания электронных книг на двух языках.</p>
-<p>Сами книги в этой программе содержат метки на время воспроизведения и позиции в тексте, что позволяет удобно и легко выполнять скороллинг в нужное место либо напрямую кликая на нужный обзац, либо через паузу, перематывая вертикальный скроллинг текста.</p>
+<p>Сами книги в этой программе содержат метки на время воспроизведения и позиции в тексте, что позволяет удобно и легко выполнять скроллинг в нужное место либо напрямую нажимая левой кнопкой мыши на нужный обзац, либо через паузу, перематывая вертикальный скроллинг текста.</p>
 <p>Её можно использовать как обычный плеер, так и ридер книг.</p>
 <p>Единственное ограничение программа - бинарник только для платформы Windows x64.</p>
 <p>Все книги в каталоге есть на двух языках - русском и английском (добавление других языков не планируется, хотя Вы можете сделать это самостоятельно.)</p>
 
 <h2>Можно ли использовать программу SyncBooker для изучения языка?</h2>
 <p>Да, конечно. Многие для изучения иностранного языка используют иностранные фильмы с субтитрами.</p>
-<p>Программа SyncBooker позволяет делать практически тоже самое, но с помощью электронных книг.</p>
+<p>Программа SyncBooker позволяет делать практически то же самое, но с помощью электронных книг.</p>
 
 <h2>Какие планы в развитии программы SyncBooker?</h2>
-<p>Во-первых, постоянная работа над улучшением синхрона как каждого языка, так и между языками.</p>
+<p>Во-первых, постоянная работа над улучшением синхронизации как каждого языка, так и между языками.</p>
 <p>Во-вторых, конечно, пополнение каталога новыми книгами.</p>
-<p>В-третьих, добавление в интерфейс возможности самостоятельного создания книг. Для этого потребуется версия программы для разработки, она занимает гораздо больше места, но при этом позволит создавать синхронные книги с помощью графического интерфеса программы, будет помогать улучшать качество синхрона. Замечу, что это достаточно сложная задача и отдалённое будущее.</p>
+<p>В-третьих, добавление в интерфейс возможности самостоятельного создания книг. Для этого потребуется версия программы для разработки, она занимает гораздо больше места, но при этом позволит создавать синхронные книги с помощью графического интерфейса программы, будет помогать улучшать качество синхронизации. Замечу, что это достаточно сложная задача и отдалённое будущее.</p>
 <p>В-четвёртых, для уменьшения распространяемого бинарного дистрибутива есть мысль добавить в программу возможность скачивания обновлений каталога через распределенную сеть DHT, но эта возможность тоже может потребовать как больших усилий и времени разработки, так и наличие желания пользователей запускать такую программу для раздачи книг другим пользователям.</p>
 
 <h2>Где можно скачать последнюю версию программы SyncBooker?</h2>
@@ -37,7 +37,36 @@ p {
 <p>Телеграм чат: <a target="_blank" href="https://t.me/syncbooker_chat">https://t.me/syncbooker_chat</a></p>
 
 <h2>Как связаться с разработчиком программы SyncBooker?</h2>
-<p>Вы может использовать для этого телеграм-чат <a target="_blank" href="https://t.me/syncbooker_chat">@syncbooker_chat</a></p>
+<p>Вы можете использовать для этого телеграм-чат <a target="_blank" href="https://t.me/syncbooker_chat">@syncbooker_chat</a></p>
 <p>Если Вы, например, хотите новую книгу и у Вас есть ссылки на исходники (mp3 и fb2) или сами файлы, то для заказа книги Вы можете прислать их на почту <a href="mailto:xayam@yandex.ru">xayam@yandex.ru</a></p>
+
+
+<h2>Слушать или читать? - Чтение во время прослушивания – вот ответ!</h2>
+<p>В течение многих лет ведутся большие дебаты по поводу изучения языков. Таким образом, возникает большой вопрос: должны ли мы изучать новые языки посредством чтения? Или аудио — самый эффективный метод? Некоторые утверждают, что текст – это определенно путь вперед.
+</p>
+<p>«Эй, но я слышал, что аудио не менее эффективно», — всегда кто-то вмешивается. Это просто не высечено в камне, и многие полагают, что ни одна из сторон никогда не скажет окончательного слова по этому вопросу.
+</p>
+<p>К счастью, исследования последних десятилетий позволили специалистам по языкам прийти к невероятному выводу: дело не в выборе между одним или другим. Речь идет об использовании лучшего из обоих миров для достижения желаемых результатов и предоставлении студентам постоянного совершенствования одного метода за счет использования его аналога.
+</p>
+<p>Они назвали это чтением во время прослушивания (RWL), и на самом деле это будущее изучения нового языка. RWL как метод изучения языка широко изучался, и его удивительные преимущества не только дали экспертам пищу для размышлений, но и предоставили студентам возможность одновременно улучшить оба аспекта своего обучения (аудирование и чтение). С меньшими усилиями.
+</p>
+<p>Среди них следующие:</p>
+<p><b>1. Фокус</b></p>
+<p>Доказано, что чтение во время прослушивания повышает концентрацию на тексте (заставляя учащихся устранять фоновый шум и сосредотачиваться на звуке, который они слушают) и рассматривается как отличная альтернатива для детей младшего возраста и взрослых с ограниченными возможностями. Ограниченный объем внимания.
+</p>
+<p><b>2. Улучшение произношения</b></p>
+<p>Одно дело прочитать слово, а другое – произнести его. Ведь полковник произносится так, как читается? А как насчет хора или очереди ? Все сложные слова, которые мы можем повторять неправильно снова и снова, прежде чем услышим их от кого-то другого. RWL гарантирует, что мы узнаем, как произносить слово, как только прочитаем его. Отлично, да?
+</p>
+<p><b>3. Повышенная мотивация</b></p>
+<p>Вышеупомянутые исследования, проведенные в последние десятилетия, определенно пролили положительный свет на этот метод изучения языка. Дети на Тайване были подвергнуты исследованию в течение 26 недель, в ходе которого две группы обучались английскому языку разными методами – одна с RWL, а другая без (Chang, CS. (2011). Эффект чтения во время прослушивания аудиокниг: беглость прослушивания и увеличение словарного запаса (Азиатский журнал преподавания английского языка, 21, 43–64). Результаты сказали сами за себя: группа RWL значительно превзошла своих коллег, не относящихся к RWL, и их мотивация к изучению будущих уроков выросла больше, чем у другой группы.
+</p>
+<p><b>4. Повышение беглости речи</b></p>
+<p>Согласно Dictionary.com, беглость — это «способность легко говорить или писать на определенном иностранном языке». Эта черта определяет, насколько хорошо вы можете связывать слова во фразы и предложения, а не то, как вы их произносите. Это то, что вообще позволяет вам говорить с носителями языка. Вышеупомянутое исследование, проведенное на Тайване, пришло к выводу, что RWL помогает учащимся лучше говорить, чем просто читать, благодаря тому, что голос рассказчика останется в нашей памяти и вернется к нам, когда он нам понадобится.
+</p>
+<p><b>5. Ближе к родным навыкам</b></p>
+<p>И последнее, но не менее важное: важно отметить, что одновременное использование чтения и аудирования может дать вам лучшее представление о том, как носители языка говорят и думают, что только один из двух методов сам по себе не поможет. Чтение и аудирование научат вас усваивать новый язык, как родной, и вы начнете совершенствовать свои языковые навыки, как никогда раньше.
+</p>
+<p>В заключение отметим, что чтение во время прослушивания — это новый и эффективный метод изучения нового языка, и самые инновационные преподаватели и компании уже используют его для обучения своих учеников. Будущее теперь за RWL!
+</p>
 </body>
 </html>
